# map-agent

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude/commands/: map-blood.md  map-boundaries.md  map-catalog.md  map-compare.md  map-export.md  map-incidence.md  map-interventions.md  map-prevalence.md  map-surveys.md  map-vectors.md  map.md
docs/: ARCHITECTURE.md  ENDPOINTS.md  GLOSSARY.md  INSTALL.md  ROADMAP.md
scripts/: spike_capabilities.py
src/map_agent/: __init__.py  server.py
src/map_agent/core/: __init__.py  analytics.py  cache.py  config.py  geoserver.py  models.py  session.py  validate.py
src/map_agent/tools/: __init__.py  admin.py  analyze.py  catalog.py  citations.py  extract.py  plot.py  wcs.py  wfs.py
