[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "map-agent"
version = "0.0.1"
description = "MCP server + Claude Code commands for the Malaria Atlas Project geoserver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MAP AI Agents" }]
keywords = ["malaria", "epidemiology", "geospatial", "mcp", "claude-code", "malariaatlas"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.0",
  "owslib>=0.30",
  "rioxarray>=0.15",
  "xarray>=2024.1",
  "geopandas>=0.14",
  "rasterstats>=0.19",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "platformdirs>=4.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-vcr>=1.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
map-mcp = "map_agent.server:main"

[project.urls]
Homepage = "https://malariaatlas.org/"
Repository = "https://github.com/ernes/map_ai_agents"

[tool.hatch.build.targets.wheel]
packages = ["src/map_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=map_agent --cov-report=term-missing"
